# BigCam

./: .gitignore  BigCam.c  BigCam.glade  CMakeLists.txt  README.md
