project( BigCam C )
cmake_minimum_required( VERSION 2.8 )
find_package( PkgConfig REQUIRED )
find_package( OpenCV REQUIRED )
pkg_check_modules( GTK2 REQUIRED gtk+-2.0 )
include_directories( ${GTK2_INCLUDE_DIRS} )
link_directories( ${GTK2_LIBRARY_DIRS} )
add_definitions( ${GTK2_CFLAGS_OTHER} )
add_executable( BigCam BigCam.c )
target_link_libraries( BigCam ${GTK2_LIBRARIES} )
target_link_libraries( BigCam ${OpenCV_LIBS} )
target_link_libraries( BigCam ${LIBXML2_LIBRARIES} m )